# astc-encoder

./: .gitattributes  .gitignore  .gitmodules  .mypy.ini  .pylintrc  CMakeLists.txt  Jenkinsfile  LICENSE.md  README.md  appveyor.yml  astcenc_clz_bug.cpp  astcenc_clz_bug.sln  astcenc_clz_bug.vcxproj  astcenc_clz_bug.vcxproj.filters  astcenc_vecmathlib.h  astcenc_vecmathlib_sse_4.h  thread_demo.cpp
.github/workflows/: build_test.yaml  build_test_py.yaml  build_test_rv.yaml  post_weekly_release.yaml  release_body_template.md
Binary/Linux32/: astcenc
Binary/MacOS/: astcenc
Binary/linux-x64/: astcenc
Binary/linux-x86/: astcenc
Binary/mac-x64/: astcenc
CMake/: Config.cmake.in  SIMD.cmake  options.cmake  python-venv.cmake  sign-exe.cmake  sign-exe.py
Docs/: Analysis.md  BranchNotes.md  Building-BE.md  Building.md  ChangeLog-2x.md  ChangeLog-3x.md  ChangeLog-4x.md  ChangeLog-5x.md  ChangeLog.md  Encoding.md  FileFormat.md  FormatOverview.md  OptimizationIdeas.md  Profiling.md  Roadmap.md  Terminology.md  Testing.md  TestingOSSFuzz.md
Source/: CMakeLists.txt  Makefile  astc_averages_and_directions.cpp  astc_block_sizes2.cpp  astc_codec_internals.h  astc_color_quantize.cpp  astc_color_unquantize.cpp  astc_compress_symbolic.cpp  astc_compute_variance.cpp  astc_decompress_symbolic.cpp  astc_encoding_choice_error.cpp  astc_error_metrics.cpp  astc_find_best_partitioning.cpp  astc_ideal_endpoints_and_weights.cpp  astc_image.cpp  astc_image_load_store.cpp  astc_integer_sequence.cpp  astc_kmeans_partitioning.cpp  astc_ktx_dds.cpp  astc_main.cpp  astc_mathlib.cpp  astc_mathlib.h  astc_mathlib_softfloat.cpp  astc_partition_tables.cpp  astc_percentile_tables.cpp  astc_pick_best_endpoint_format.cpp  astc_platform_dependents.cpp  astc_platform_isa_detection.cpp  astc_quantization.cpp  astc_stb_tga.cpp  astc_symbolic_physical.cpp  astc_toplevel.cpp  astc_toplevel_help.cpp  astc_weight_align.cpp  astc_weight_quant_xfer_tables.cpp  astcenc.h  astcenc_averages_and_directions.cpp  astcenc_block_sizes.cpp  astcenc_block_sizes2.cpp  astcenc_color_quantize.cpp  (+66 more)
Source/Fuzzers/: build.sh  fuzz_astc_compress.cpp  fuzz_astc_decompress.cpp  fuzz_astc_physical_to_symbolic.cpp
Source/Include/: astcenc.h
Source/UnitTest/: CMakeLists.txt  cmake_core.cmake  test_decode.cpp  test_encode.cpp  test_guided.cpp  test_simd.cpp  test_softfloat.cpp
Source/VS2017/: astcenc.sln  astcenc.vcxproj  astcenc.vcxproj.filters
Source/VS2019/: astcenc-avx2.vcxproj  astcenc-sse2.filters  astcenc-sse2.vcxproj  astcenc-sse4.1.filters  astcenc-sse4.1.vcxproj  astcenc-sse4.2.vcxproj  astcenc.sln
Source/win32-2010/astcenc/: astcenc.sln  astcenc.vcxproj  astcenc.vcxproj.filters
Source/win32-2017/astcenc/: astcenc.vcproj  astcenc.vcxproj  astcenc.vcxproj.filters  stdint.h
Test/: Makefile  astc_download_ref_images.py  astc_dump_binary.py  astc_image_info.py  astc_image_sweep.py  astc_minify_test.sh  astc_profile_valgrind.py  astc_quality_test.py  astc_ref_download.py  astc_run.py  astc_run_image_tests.py  astc_size.py  astc_size_binary.py  astc_test_competitive.py  astc_test_competitive_plot.py  astc_test_functional.py  astc_test_image.py  astc_test_image_dl.py  astc_test_python.py  astc_test_reference.csv  astc_test_result_plot.py  astc_test_result_report.py  astc_test_run.py  astc_trace_analysis.py  astc_update_ref.sh  astc_update_ref_master.sh  make.bat  reference.csv  runner.py
Test/Data/: HDR-A-1x1.astc  HDR-A-1x1.exr  HDR-B-1x1.exr  LDR-A-1x1.astc  LDRS-A-1x1.astc  LDRS-B-1x1.astc  negative_block_size.astc  negative_huge.astc  negative_magic.astc  negative_overflow.astc  negative_short.astc
Test/Data/Tiles/: hdr-complex.exr  hdr.astc  hdr.exr  hdr.hdr  ldr.astc  ldr.dds  ldr.ktx  ldr.tga
Test/DocSource/: astc_image_info.rst  astc_size_binary.rst  astc_test_functional.rst  astc_test_image.rst  astc_test_image_dl.rst  conf.py  index.rst  testlib-encoder.rst  testlib-image.rst  testlib-misc.rst  testlib-resultset.rst  testlib-testset.rst
Test/Images/HDRIHaven/: LICENSE.txt  astc_reference-1.7_fast_results.csv  astc_reference-1.7_fastest_results.csv  astc_reference-1.7_medium_results.csv  astc_reference-1.7_results.csv  astc_reference-1.7_thorough_results.csv  astc_reference-2.0-avx2_fast_results.csv  astc_reference-2.0-avx2_fastest_results.csv  astc_reference-2.0-avx2_medium_results.csv  astc_reference-2.0-avx2_results.csv  astc_reference-2.0-avx2_thorough_results.csv  astc_reference-2.0-sse2_fast_results.csv  astc_reference-2.0-sse2_fastest_results.csv  astc_reference-2.0-sse2_medium_results.csv  astc_reference-2.0-sse2_thorough_results.csv  astc_reference-2.0-sse4.1_thorough_results.csv  astc_reference-2.0-sse4.2_fast_results.csv  astc_reference-2.0-sse4.2_fastest_results.csv  astc_reference-2.0-sse4.2_medium_results.csv  astc_reference-2.0-sse4.2_thorough_results.csv  astc_reference-2.1-avx2_fast_results.csv  astc_reference-2.1-avx2_fastest_results.csv  astc_reference-2.1-avx2_medium_results.csv  astc_reference-2.1-avx2_thorough_results.csv  astc_reference-2.1-sse2_fast_results.csv  astc_reference-2.1-sse2_fastest_results.csv  astc_reference-2.1-sse2_medium_results.csv  astc_reference-2.1-sse2_thorough_results.csv  astc_reference-2.1-sse4.1_fast_results.csv  astc_reference-2.1-sse4.1_fastest_results.csv  astc_reference-2.1-sse4.1_medium_results.csv  astc_reference-2.1-sse4.2_thorough_results.csv  astc_reference-2.2-avx2_fast_results.csv  astc_reference-2.2-avx2_fastest_results.csv  astc_reference-2.2-avx2_medium_results.csv  astc_reference-2.2-avx2_thorough_results.csv  (+208 more)
Test/Small_Images/: astc_test_reference.csv
Test/testlib/: encoder.py  image.py  misc.py  resultset.py  testset.py
Utils/: astc_angular_error.cpp  astc_blend_test.cpp  astc_quant_generator.cpp  astc_rgbm_blockify.cpp  astc_rgbm_codec.cpp  astc_test_autoextract.cpp  astc_test_autoextract_hdr.cpp  astcenc_u8_test_bench.cpp
Utils/Example/: CMakeLists.txt  README.md  astc_api_example.cpp
jenkins/: build-image.sh  build.Dockerfile  build.Jenkinsfile  dockerimage.Jenkinsfile  nightly.Jenkinsfile  release.Jenkinsfile
(+1265 files in other folders)
